Basic design setup

--- a/app/assets/css/login.scss
+++ b/app/assets/css/login.scss
@@ -1,6 +1,6 @@
 #login-body {
   position         : absolute;
-  z-index          : 99999999;
+  z-index          : 1000;
   top              : 0;
   left             : 0;
   right            : 0;
