--- a/app/assets/css/App.scss
+++ b/app/assets/css/App.scss
@@ -1,11 +1,50 @@
 * {
-    box-sizing: border-box;
+  box-sizing : border-box;
+}
+
+body {
+  background      : url('../images/background.jpg') no-repeat fixed;
+  background-size : cover;
+  margin          : 0;
 }
 
 .App {
-    position : absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  margin     : auto;
+  width      : 30em;
+  height     : 100vh;
+  background : linear-gradient(90deg, rgba(72, 71, 96, 1) 0%, rgba(62, 62, 79, 1) 50%, rgba(61, 74, 77, 1) 100%);
+  display: flex;
+  flex-direction: column;
+
+  #Main_Header {
+    flex: 0 0;
+    //background-color: ;//rgba(255, 255, 255, .3);
+    background     : linear-gradient(to right, rgba(#ee32ff, .7) 0%, rgba(#898bff, .7) 100%);
+    border-radius  : 0 0 10px 10px;
+    box-shadow     : 0 0px 10px #111111;
+    width          : 100%;
+    height         : 5em;
+    padding-top    : .5em;
+    padding-bottom : .5em;
+    display        : flex;
+
+    flex-direction : row;
+    align-items    : center;
+    padding-left   : 10px;
+
+    img {
+      flex-basis    : 4em;
+      width         : 4em;
+      height        : 4em;
+      object-fit    : cover;
+      border        : 1px solid black;
+      border-radius : 45%;
+      box-shadow    : 0 0 2px #111111;
+    }
+
+    h2 {
+      flex-grow  : 1;
+      text-align : center;
+    }
+  }
 }
