--- a/app/assets/css/App.scss
+++ b/app/assets/css/App.scss
@@ -21,12 +21,11 @@ body {
 
 
   #Main_Header {
-    flex: 0 0;
+    flex: 0 0 5em;
     background     : linear-gradient(to right, rgba(#ee32ff, .7) 0%, rgba(#898bff, .7) 100%);
     border-radius  : 0 0 10px 10px;
     box-shadow     : 0 0px 10px #111111;
     width          : 100%;
-    height         : 5em;
     padding-top    : .5em;
     padding-bottom : .5em;
     display        : flex;
@@ -50,4 +49,9 @@ body {
       text-align : center;
     }
   }
+}
+
+
+#Router {
+  flex: 1 0;
 }
