--- a/app/assets/css/BackgroundUserImage.scss
+++ b/app/assets/css/BackgroundUserImage.scss
@@ -10,12 +10,13 @@
   overflow : hidden;
 
   .BackgroundUserImage {
-    position        : relative;
-    left            : -20px;
-    top             : -20px;
-    width           : calc(100% + 20px);
-    height          : 100%;
-    background-size : cover;
-    filter          : blur(10px);
+    position            : relative;
+    left                : -20px;
+    top                 : -20px;
+    width               : calc(100% + 20px);
+    height              : 100%;
+    background-size     : cover;
+    background-position : center;
+    filter              : blur(10px);
   }
 }
