--- a/app/assets/css/settings.scss
+++ b/app/assets/css/settings.scss
@@ -1,3 +1,12 @@
 #Settings {
-  flex: 1 1;
+
+  h1{
+    text-align : center;
+    color: #eee;
+  }
+
+}
+
+.darken {
+  background: rgba(0, 0, 0, .4);
 }
