--- a/app/assets/css/friendlist.scss
+++ b/app/assets/css/friendlist.scss
@@ -5,3 +5,12 @@
 .dark-blue {
   background-color: rgba(#2c2c36, .6) !important;
 }
+
+#FriendList {
+  flex: 1 1;
+}
+
+#FriendList-Search {
+  width: 2em;
+  margin: 1em auto 1em auto;
+}
