Fixing the question CSS

--- a/app/assets/css/App.scss
+++ b/app/assets/css/App.scss
@@ -53,7 +53,8 @@ body {
 }
 
 .ingame {
-  grid-template : "game" !important;
+//  grid-template : "game" !important;
+  display:flex;
 }
 
 #Router {
