--- a/app/assets/css/GameInstance.scss
+++ b/app/assets/css/GameInstance.scss
@@ -1,5 +1,25 @@
 @import "config";
 
+@keyframes correctAnim {
+  from {
+    background-color : rgba(255, 255, 255, .8);
+  }
+
+  to {
+    background-color : rgba(80, 150, 80, .8);
+  }
+}
+
+@keyframes wrongAnim {
+  from {
+    background-color : rgba(255, 255, 255, .8);
+  }
+
+  to {
+    background-color : rgba(150, 80, 80, .8);
+  }
+}
+
 #PLAYING {
   width           : 100%;
   height          : 100%;
@@ -45,4 +65,57 @@
     }
 
   }
+
+  #showAnswers {
+    width : 80%;
+
+    .line {
+      display       : flex;
+      align-content : center;
+
+      .left, .right {
+        background          : rgba(255, 255, 255, .8);
+        border-radius       : 8px;
+        padding             : 10px;
+        align-self          : center;
+
+        animation-delay     : 1s;
+        animation-duration  : .5s;
+        animation-fill-mode : forwards;
+      }
+
+      .left {
+        margin-left : 15px;
+      }
+
+      .right {
+        margin-right : 15px;
+      }
+
+      .correct {
+        animation-name : correctAnim;
+      }
+
+      .wrong {
+        animation-name : wrongAnim;
+      }
+
+      img {
+        width         : 20%;
+        border-radius : 50%;
+        border        : 3px solid red;
+        object-fit    : cover;
+      }
+    }
+
+    #firstAnswer {
+      justify-content : right;
+    }
+
+    #secondAnswer {
+      justify-content : left;
+    }
+
+  }
+
 }
